name:                hgrep
version:             0.1.0.0
synopsis:            a grep like program for working with haskell files
-- description:
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@edea.se
copyright:           2013 Adam Bergmark
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable hgrep
  hs-source-dirs:    src
  main-is:           Main.hs
  ghc-options:       -Wall -fno-warn-name-shadowing
  -- other-modules:
  build-depends:     base
                   , groom
                   , haskell-src-exts
                   , mtl
